--- a/IkaSimulator/IkaSimulator.Droid/packages.config
+++ b/IkaSimulator/IkaSimulator.Droid/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="OxyPlot.Core" version="1.0.0-unstable1983" targetFramework="MonoAndroid60" />
+  <package id="OxyPlot.Xamarin.Android" version="1.0.0-unstable1983" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.1.1.0" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.1.1.0" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.1.1.0" targetFramework="MonoAndroid60" />
